# Projet-Edouard

./: .gitignore  README.md  main.py  pyproject.toml
commandEdouard/commandEdt/: emploiDuTemps.py
commandEdouard/commandTodo/: categorie.py  todo.py
commandEdouard/commandTodo/dataTodo/: 185775342894579712.json
commandEdouard/commandWiki/: wiki.py
templates/: 404.html  page.html
webApp/: keep_alive.py
